@@ -1,3 +1,6 @@
+06/06/14 Julien Dutheil
+* bppPhySamp now ouput trees as well.
+
 17/04/14 Julien Dutheil
 * bppSeqMan: Translate uses global genetic_code argument instead of local 'code' argument.
 * All programs use the --seed argument to set random seed for reproduceable results.
